<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">TestBCClient</string>
    <string name="button_braincloud">brainCloud</string>
    <string name="button_connect">Connect</string>
    <string name="header_auth_google">Google Authentication</string>
    <string name="header_auth_universal">Universal Authentication</string>
    <string name="tag_password">Password</string>
    <string name="tag_user">User</string>

</resources>
